--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,13 @@ dependencies:
   crypto: ^3.0.3
   get: ^4.6.5
   get_storage: ^2.1.1
-  http: ^1.0.0
+  http: ^0.13.0
   retry: ^3.1.2
+  shimmer: ^3.0.0
+  flutter_card_swiper: ^5.1.0
+  animated_card: ^2.0.0
+  cached_network_image: ^3.0.0
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
